# lab_05

.github/workflows/: main.yml
banking/: CMakeLists.txt  check.cpp
