project(RU)
add_library(banking STATIC Account.cpp Transaction.cpp)
target_compile_options(banking PRIVATE "--coverage")
option(BUILD_TESTS "Build tests" OFF)
if(BUILD_TESTS)
	add_subdirectory(third-party/gtest)
	add_executable(check check.cpp)
	target_link_libraries(check gtest_main)
	target_link_libraries(check gmock_main)
	target_link_libraries(check pthread)
	target_link_libraries(check banking --coverage)
endif()
